# information-tech/database/backend/db-service/src/main/java/com/university/db/controller/DatabaseController.java
@@ -10,6 +10,9 @@ import com.university.db.exception.NotFoundException;
 import com.university.db.service.DatabaseService;
 import com.university.db.service.SerializationService;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.hateoas.CollectionModel;
+import org.springframework.hateoas.Link;
+import org.springframework.hateoas.RepresentationModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -22,9 +25,11 @@ import java.net.URI;
 import java.util.List;
 
 import static com.university.db.utils.RequestUtils.*;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @RestController
-@RequestMapping("${api.context}/databases")
+@RequestMapping("/db-service/databases")
 public class DatabaseController {
 
     private final DatabaseService databaseService;
@@ -39,30 +44,34 @@ public class DatabaseController {
         this.apiContext = apiContext;
     }
 
-    @PostMapping
+    @RequestMapping(value = "", method = RequestMethod.POST, produces = {"application/hal+json"})
     public ResponseEntity<?> create(@Valid @RequestBody DatabaseMetadataDto dto) {
         try {
             DatabaseDto database = databaseService.create(dto.getName());
+            RepresentationModel<?> result = CollectionModel.of(database,
+                    getLinks(database.getId(), database.getName()));
             return ResponseEntity
                     .created(URI.create(String.format("%s/databases/%s", apiContext, database.getId())))
-                    .body(database);
+                    .body(result);
         } catch (ConflictException e) {
             return ResponseEntity.status(HttpStatus.CONFLICT)
                     .body(new ErrorResponse(e.getMessage()));
         }
     }
 
-    @GetMapping("/{id}")
+    @RequestMapping(value = "/{id}", method = RequestMethod.GET, produces = {"application/hal+json"})
     public ResponseEntity<?> find(@Valid @NotBlank @PathVariable String id) {
         try {
             DatabaseDto database = databaseService.findById(id);
-            return ResponseEntity.ok(database);
+            RepresentationModel<?> result = CollectionModel.of(database,
+                    getLinks(database.getId(), database.getName()));
+            return ResponseEntity.ok(result);
         } catch (NotFoundException e) {
             return notFound(e.getMessage());
         }
     }
 
-    @GetMapping("/{id}/export")
+    @RequestMapping(value = "/{id}/export", method = RequestMethod.GET)
     public @ResponseBody
     ResponseEntity<?> exportDb(@Valid @NotBlank @PathVariable String id) {
         try {
@@ -77,36 +86,42 @@ public class DatabaseController {
         }
     }
 
-    @PostMapping("/import")
+    @RequestMapping(value = "/import", method = RequestMethod.GET, produces = {"application/hal+json"})
     public ResponseEntity<?> importDb(@Valid @NotBlank @RequestParam("database") MultipartFile file) {
         try {
             DatabaseDto db = serializationService.importFile(file);
-            return ResponseEntity.ok(db);
+            RepresentationModel<?> result = CollectionModel.of(db,
+                   getLinks(db.getId(), db.getName()));
+            return ResponseEntity.ok(result);
         } catch (FileFormatException e) {
             return badRequest(e.getMessage());
         }
     }
 
-    @GetMapping
+    @RequestMapping(method = RequestMethod.GET, produces = {"application/hal+json"})
     public ResponseEntity<?> findByName(@Valid @NotBlank @RequestParam(required = false) String name) {
         if (name == null) {
             List<DatabaseDto> databases = databaseService.findAll();
-            return ResponseEntity.ok(databases);
+            databases.forEach(d -> d.add(getLinks(d.getId(), d.getName())));
+            Link allDatabases = linkTo(methodOn(DatabaseController.class).findByName(null)).withSelfRel();
+            return ResponseEntity.ok(CollectionModel.of(databases, allDatabases));
         }
         try {
             DatabaseDto database = databaseService.findByName(name);
-            return ResponseEntity.ok(database);
+            RepresentationModel<?> result = CollectionModel.of(database,
+                    getLinks(database.getId(), database.getName()));
+            return ResponseEntity.ok(result);
         } catch (NotFoundException e) {
             return notFound(e.getMessage());
         }
     }
 
-    @PutMapping("/{id}")
+    @RequestMapping(value = "/{id}", method = RequestMethod.PUT, produces = {"application/hal+json"})
     public ResponseEntity<?> edit(@Valid @NotBlank @PathVariable String id,
                                   @Valid @RequestBody DatabaseMetadataDto dto) {
         try {
             DatabaseDto db = databaseService.edit(id, dto);
-            return ResponseEntity.ok(db);
+            return ResponseEntity.ok(CollectionModel.of(db, getLinks(db.getId(), db.getName())));
         } catch (NotFoundException e) {
             return notFound(e.getMessage());
         } catch (ConflictException e) {
@@ -114,7 +129,7 @@ public class DatabaseController {
         }
     }
 
-    @DeleteMapping("/{id}")
+    @RequestMapping(value = "/{id}", method = RequestMethod.DELETE, produces = {"application/hal+json"})
     public ResponseEntity<?> delete(@Valid @NotBlank @PathVariable String id) {
         try {
             databaseService.delete(id);
@@ -122,6 +137,22 @@ public class DatabaseController {
         } catch (NotFoundException e) {
             return notFound(e.getMessage());
         }
+    }
+
+    private List<Link> getLinks(String id, String name) {
+        Link findByIdLink = linkTo(methodOn(DatabaseController.class)
+                .find(id)).withSelfRel();
+        Link findByNameLink = linkTo(methodOn(DatabaseController.class)
+                .findByName(name)).withSelfRel();
+
+        Link tablesLink = linkTo(methodOn(TableController.class)
+                .findInDatabase(id)).withRel("tables");
+        Link findAllLink = linkTo(methodOn(DatabaseController.class)
+                .findByName(null)).withRel("databases");
+        Link exportLink = linkTo(methodOn(DatabaseController.class)
+                .exportDb(id)).withRel("export");
+
+        return List.of(findByIdLink, findByNameLink, tablesLink, findAllLink, exportLink);
     }
 
 }
