# information-tech/database/backend/db-service/src/main/java/com/university/db/dto/metadata/RowMetadataDto.java
@@ -1,12 +1,13 @@
 package com.university.db.dto.metadata;
 
 import lombok.Data;
+import org.springframework.hateoas.RepresentationModel;
 
 import javax.validation.constraints.NotEmpty;
 import java.util.List;
 
 @Data
-public class RowMetadataDto {
+public class RowMetadataDto extends RepresentationModel<RowMetadataDto> {
 
     @NotEmpty
     private List<String> fields;
